--- a/index.ipynb
+++ b/index.ipynb
@@ -33,6 +33,7 @@
    "outputs": [],
    "source": [
     "# Import necessary libraries\n",
+    "import pandas as pd\n",
     "\n",
     "# Import passengers.csv and set it as a time-series object. Plot the TS\n"
    ]
@@ -314,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
